Fix bug causing nav menu to truncate hero image
- Adjusted CSS to ensure nav menu does not overlap with the hero image

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -285,7 +285,7 @@ footer {
 }
 
 /* styles for larger screens */
-@media (min-width: 550px) {
+@media (min-width: 600px) {
   .nav_toggle_label,
   #nav_toggle {
     display: none; /* Hide burger menu icon and checkbox on larger screens */
